# ChangeLog for sci-biology/cgview-bin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2015; Justin Lecher <jlec@gentoo.org> cgview-bin-20131130.ebuild:
  sci-biology/cgview-bin: fix SLOT operators; drop KEYWORDS as fetch failed

*cgview-bin-20131130 (23 Mar 2014)

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +cgview-bin-20131130.ebuild, +metadata.xml:
  sci-biology/cgview-bin: new package, needs java team testing, maybe dev-
  java/batik is misisng svg USE flag?